--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,9 @@
     "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "npm:rolldown-vite@7.2.10"
+    "vite": "npm:rolldown-vite@7.2.10",
+    "vite-plugin-mock-dev-server": "^2.0.7",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.10"
